# BatchRelaxer

./: .gitignore  LICENSE  README.md  batch_relax.py  pyproject.toml  setup.py  test_batch_relax.py
BatchRelaxer/: __init__.py  batch_relax.py  test_batch_relax.py
example/: mlff_relax.py  multi_gpu_inference.py  torch_sim_example.py
